[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ikvpy"
version = "0.0.34"
description = 'Python client for IKV (Inlined Key Value Store).'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["ikv", "inlined", "ikv python", "inlined python client", "ikv py client"]
authors = [
  { name = "Inlined I/O", email = "pushkar@inlined.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "boto3>=1.34.69",
  "cffi>=1.16.0",
  "grpcio>=1.62.1",
  "grpcio_status>=1.62.1",
  "protobuf>=4.25.3"
]

[project.urls]
Documentation = "https://github.com/inlinedio/ikv-store#readme"
Issues = "https://github.com/inlinedio/ikv-store/issues"
Source = "https://github.com/inlinedio/ikv-store/ikv-python-client"

[tool.hatch.version]
path = "src/ikvpy/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ikvpy tests}"

[tool.coverage.run]
source_pkgs = ["ikvpy", "tests"]
branch = true
parallel = true
omit = [
  "src/ikvpy/__about__.py",
]

[tool.coverage.paths]
ikvpy = ["src/ikvpy", "*/ikvpy/src/ikvpy"]
tests = ["tests", "*/ikvpy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
