[package]
name = "ikv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
jni = "0.21.1"
kafka = "0.10.0"
memmap2 = "0.9.0"
protobuf = "3.3.0"
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"
rdkafka = "0.36.0"
tokio = { version = "1.34.0", features = ["full"]}
yaml-rust = "0.4.5"

[build-dependencies]
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"

[lib]
crate_type = ["cdylib"]
