[package]
name = "ikv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = { version = "0.3.29", features = ["thread-pool"]}
fxhash = "0.2.1"
integer-encoding = "4.0.0"
jni = "0.21.1"
kafka = "0.10.0"
memmap2 = "0.9.0"
prost = "0.12.3"
protobuf = "3.3.0"
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"
rdkafka = "0.36.0"
tokio = { version = "1.34.0", features = ["full"]}
tokio-util = "0.7.10"
tonic = "0.10.2"
yaml-rust = "0.4.5"

[build-dependencies]
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"
tonic-build = "0.10.2"

[lib]
crate_type = ["cdylib"]
