[package]
name = "ikv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = "1.1.1"
aws-sdk-s3 = "1.8.0"
base64 = "0.21.7"
flate2 = "1.0.28"
futures = { version = "0.3.29", features = ["thread-pool"]}
fxhash = "0.2.1"
integer-encoding = "4.0.0"
jni = "0.21.1"
kafka = "0.10.0"
log = "0.4.20"
log4rs = "1.2.0"
md5 = "0.7.0"
memmap2 = "0.9.0"
prost = "0.12.3"
protobuf = "3.3.0"
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"
rdkafka = { version = "0.36.0", features = ["ssl-vendored"]}
tar = "0.4.40"
tokio = { version = "1.34.0", features = ["full"]}
tokio-util = "0.7.10"
tonic = { version = "0.10.2", features = ["tls"]}
yaml-rust = "0.4.5"

[build-dependencies]
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"
tonic-build = "0.10.2"

[lib]
crate_type = ["cdylib"]
